eks/k8s/nginx_deploy.yml
#Deployment for Nginx Server with custom index.html to edit web page beyond standard test prompt.

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 30 
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-pod
        image: nginx:latest
        resources:
          limits:
            memory: "50Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/
          name: nginx-html-config
      volumes:
      - name: nginx-html-config
        configMap:
          name: nginx-index-html-config
